# swagger.json
@@ -11,55 +11,15 @@
     "https"
   ],
   "paths": {
-    "/login": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/auth/github/callback": {
-      "get": {
-        "description": "",
-        "responses": {
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/logout": {
-      "get": {
-        "description": "",
-        "responses": {
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/patient": {
       "get": {
         "tags": [
           "Patients"
         ],
         "description": "Retrieve a list of all patients.",
-        "parameters": [
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -84,19 +44,11 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -119,11 +71,6 @@
         ],
         "description": "Register a new patient into the hospital system.",
         "parameters": [
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
@@ -165,9 +112,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -190,11 +134,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
             "type": "string"
           },
           {
@@ -237,9 +176,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -267,11 +203,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
@@ -280,9 +211,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -304,19 +232,9 @@
           "Doctors"
         ],
         "description": "Retrieve a list of all doctors.",
-        "parameters": [
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -341,19 +259,11 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -376,11 +286,6 @@
         ],
         "description": "Add a new doctor to the clinic roster.",
         "parameters": [
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
@@ -407,9 +312,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -432,11 +334,6 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
             "type": "string"
           },
           {
@@ -464,9 +361,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -494,11 +388,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-dev-bypass",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
@@ -507,9 +396,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
